# utest

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE.txt  README.md  build_docs.sh  demo.sh  rebuild.sh  run_all_demos.sh  run_all_tests.sh  run_demo.sh  todo.md
.github/workflows/: ci.yml
cmake/: utestConfig.cmake.in
demo/: CMakeLists.txt  comprehensive_demo.cpp  demo_ascii_checkmarks.cpp  demo_core_features.cpp  demo_main.cpp  demo_no_tests.cpp  demo_unicode_checkmarks.cpp  demo_verbose_mode.cpp  demo_with_failure.cpp
include/: utest.h
tests/: CMakeLists.txt  testUTest.cpp  test_comprehensive_features.cpp  test_core_features.cpp  test_edge_cases.cpp  test_enhanced_features.cpp  test_equals_macros.cpp  test_new_features.cpp  test_no_tests.cpp  test_string_contains.cpp
